--- a/libary/Cargo.toml
+++ b/libary/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2021"
 sha3 = "0.10.8"
 
 [dependencies.oqs]
-version = "0.9.0"
+# Until https://github.com/open-quantum-safe/liboqs-rust/pull/259 is merged, we directly pull from https://github.com/Scarjit/liboqs-rust
+git = "https://github.com/Scarjit/liboqs-rust"
 default-features = false
 features = ["kyber", "dilithium", "serde", "vendored"]
 
