--- a/libary/Cargo.toml
+++ b/libary/Cargo.toml
@@ -13,7 +13,7 @@ sha3 = "0.10.8"
 # Until https://github.com/open-quantum-safe/liboqs-rust/pull/259 is merged, we directly pull from https://github.com/Scarjit/liboqs-rust
 git = "https://github.com/Scarjit/liboqs-rust"
 default-features = false
-features = ["kyber", "dilithium", "serde", "vendored"]
+features = ["ml_kem", "ml_dsa", "serde", "vendored"]
 
 [dependencies.anyhow]
 version = "1.0.81"
