--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,5 +14,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Run tests
-        run: cargo test --verbose
+      - uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: nightly
+          targets: wasm32-unknown-unknown, x86_64-unknown-linux-gnu
+      - name: Run clippy
+        run: cargo clippy --all-targets --all-features -- -D warnings
+      - name: Run tests on x86_64-unknown-linux-gnu
+        run: cargo test --target x86_64-unknown-linux-gnu
+      - name: Run tests on wasm32-unknown-unknown
+        run: cargo test --target wasm32-unknown-unknown
