--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,6 +18,7 @@ jobs:
         with:
           toolchain: nightly
           targets: wasm32-unknown-unknown, x86_64-unknown-linux-gnu
+          components: rustfmt, clippy
       - name: Run clippy
         run: cargo clippy --all-targets --all-features -- -D warnings
       - name: Run tests on x86_64-unknown-linux-gnu
