--- a/libary/Cargo.toml
+++ b/libary/Cargo.toml
@@ -9,6 +9,11 @@ repository = "https://github.com/Scarjit/CosmicCipher"
 [dependencies]
 sha3 = "0.10.8"
 
+[dependencies.rand]
+version = "0.8.5"
+default-features = false
+features = ["alloc"]
+
 [dependencies.oqs]
 # Until https://github.com/open-quantum-safe/liboqs-rust/pull/259 is merged, we directly pull from https://github.com/Scarjit/liboqs-rust
 git = "https://github.com/Scarjit/liboqs-rust"
@@ -16,5 +21,5 @@ default-features = false
 features = ["ml_kem", "ml_dsa", "serde", "vendored"]
 
 [dependencies.anyhow]
-version = "1.0.81"
+version = "1.0.82"
 default-features = false
