--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,8 +15,17 @@ repos:
 -   repo: local
     hooks:
         - id: fmt
-          name: rustfmt
-          description: Runs rustfmt
-          entry: rustfmt
+          name: cargo fmt
+          description: Runs cargo fmt
+          entry: cargo fmt --all
+          pass_filenames: false
           language: rust
           types: [ rust ]
+
+        - id: update-notice
+          name: update Notice file
+          pass_filenames: false
+          description: Update notice
+          entry: echo "This project wouldn't be possible without the following amazing dependencies:\n" > NOTICE && cargo license >> NOTICE
+          language: system
+          types: [ text ]
