--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,11 +17,11 @@ jobs:
       - uses: dtolnay/rust-toolchain@master
         with:
           toolchain: nightly
-          targets: wasm32-unknown-unknown, x86_64-unknown-linux-gnu
+          targets: wasm32-unknown-emscripten, x86_64-unknown-linux-gnu
           components: rustfmt, clippy
       - name: Run clippy
         run: cargo clippy --all-targets --all-features -- -D warnings
       - name: Run tests on x86_64-unknown-linux-gnu
         run: cargo test --target x86_64-unknown-linux-gnu
-      - name: Run tests on wasm32-unknown-unknown
-        run: cargo test --target wasm32-unknown-unknown
+      - name: Run tests on wasm32-unknown-emscripten
+        run: cargo test --target wasm32-unknown-emscripten
