--- a/libary/Cargo.toml
+++ b/libary/Cargo.toml
@@ -10,12 +10,25 @@ default = ["serde"]
 serde = ["oqs/serde"]
 
 [dependencies]
-sha3 = "0.10.8"
-serde = { version = "1.0.197", features = ["derive"] }
+
+[dependencies.sha3]
+default-features = false
+version = "0.10.8"
+
+[dependencies.serde]
+version = "1.0.197"
+default-features = false
+features = ["derive"]
 
 [dependencies.ed25519-dalek]
 version = "2.1.1"
+default-features = false
 features = ["rand_core"]
+
+[dependencies.x25519-dalek]
+version = "2.0.1"
+default-features = false
+features = ["static_secrets", "getrandom"]
 
 [dependencies.rand]
 version = "0.8.5"
