--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,16 +12,22 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target: [x86_64-unknown-linux-gnu, wasm32-unknown-emscripten]
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@master
         with:
           toolchain: nightly
-          targets: wasm32-unknown-emscripten, x86_64-unknown-linux-gnu
+          targets: ${{ matrix.target }}
           components: rustfmt, clippy
+
+      - uses: mymindstorm/setup-emsdk@v14
+        if: matrix.target == 'wasm32-unknown-emscripten'
+
       - name: Run clippy
         run: cargo clippy --all-targets --all-features -- -D warnings
-      - name: Run tests on x86_64-unknown-linux-gnu
-        run: cargo test --target x86_64-unknown-linux-gnu
-      - name: Run tests on wasm32-unknown-emscripten
-        run: cargo test --target wasm32-unknown-emscripten
+
+      - name: Run tests
+        run: cargo test --target ${{ matrix.target }}
