--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: Install build-essential
         run: |
           sudo apt-get -y update
-          sudo apt-get -y install build-essential
+          sudo apt-get -y install build-essential gcc-multilib
 
       - uses: mymindstorm/setup-emsdk@v14
         if: matrix.target == 'wasm32-unknown-emscripten'
