feat: some wasm
Signed-off-by: Ferdinand Linnenberg <ferdinand@linnenberg.dev>

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -2,6 +2,6 @@
 version: 2
 updates:
   - package-ecosystem: "cargo"
-    directory: "/libary"
+    directory: "/library"
     schedule:
       interval: "weekly"
