--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -27,6 +27,12 @@ optional = true
 [dependencies.wasm-bindgen]
 version = "0.2.84"
 
+[dependencies.base64]
+version = "0.22.1"
+
+[dependencies.once_cell]
+version = "1.19.0"
+
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
 
