--- a/rest/Cargo.toml
+++ b/rest/Cargo.toml
@@ -28,3 +28,9 @@ version = "0.22.1"
 
 [dependencies.http]
 version = "1.1.0"
+
+[profile.release]
+lto = true
+strip = true
+codegen-units = 1
+opt-level = 3
